Fix issue with toolbox sometimes overflowing. Update structured-blocks.

--- a/css/editors/structured-blocks/style.css
+++ b/css/editors/structured-blocks/style.css
@@ -1,9 +1,9 @@
 .block-editor {
-    margin-right: 215px;
+    margin-right: 218px;
 }
 
 .block-toolbox {
-    width: 215px;
+    display: table;
     position: absolute;
     top: 0px;
     right: 0px;
@@ -12,7 +12,7 @@
 }
 
 .block-toolbox .toolbox-group {
-    float: left;
+    display: table-cell;
 }
 
 .block-toolbox .block-trash .text-out {
